--- a/.prettierrc
+++ b/.prettierrc
@@ -13,13 +13,29 @@
   "bracketSameLine": true,
   "vueIndentScriptAndStyle": false,
   "embeddedLanguageFormatting": "auto",
-  "tailwindConfig": "./tailwind.config.ts",
-  "tailwindAttributes": ["class", "class:list", "custom", "className", "ngClass"],
-  "tailwindFunctions": ["twMerge", "twJoin", "classnames", "clsx", "ctl"],
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "tailwindAttributes": [
+    "class",
+    "class:list",
+    "custom",
+    "className",
+    "ngClass"
+  ],
+  "tailwindFunctions": [
+    "twMerge",
+    "twJoin",
+    "classnames",
+    "clsx",
+    "ctl"
+  ],
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
-      "files": ["**/*.svelte"],
+      "files": [
+        "**/*.svelte"
+      ],
       "options": {
         "parser": "svelte"
       }
